# preprocesamiento_proyecto_enero

./: README.md  checklist.md  config.yml  eda.ipynb  pyproject.toml  results_analysis.ipynb  test.py
data/: train.csv
doc/: 4.4 Preprocesamiento.ipynb  4.4. Datasets.ipynb  EmployeeStress.csv  Preprocesamiento proyecto enero.odt
src/: eda_helper.py  model_manager.py  preprocessing.py  reporting.py  training.py  utils.py
