[project]
name = "06-proyecto-intermodular-enero-felixmorillas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lab>=8.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]
